# portal-universe

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  CLAUDE.md  README.md  build.gradle  certs  docker-compose-local.yml  docker-compose.yml  docs_template  full_debug.sh  settings.gradle
.claude/agents/: documenter.md
.claude/rules/: common.md
.claude/skills/: documentation-system.md
.github/workflows/: chatbot-ci.yml  ci.yml  contract-check.yml  deploy.yml  docker.yml  e2e.yml  frontend-ci.yml  java-ci.yml  prism-ci.yml
config-repo/: api-gateway-docker.yml  api-gateway-local.yml  api-gateway.yml  application-docker.yml  application-local.yml  auth-service-docker.yml  auth-service-local.yml  blog-service-docker.yml  blog-service-local.yml  notification-service-docker.yml  shopping-service-docker.yml  shopping-service-local.yml
docs/: README.md  ROADMAP.md  SWAGGER_ACTUATOR_SECURITY.md  shopping-frontend-gap-implementation.md
docs/adr/: ADR-001-admin-component-structure.md  ADR-002-api-endpoint-design.md  ADR-003-authorization-strategy.md  (+47 more)
docs_template/: README.md
e2e-tests/: .gitignore  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  playwright.config.ts  testScript.sh  tsconfig.json
frontend/: .dockerignore  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  script.sh
integration-tests/: build.gradle  docker-compose.test.yml
k6/: check-results.py  coupon-stress.js  load-test.js
k8s/: .gitignore  secret.yaml
localstack-init/: README.md  init-s3.sh
monitoring/: prometheus.yml
scripts/: docker-entrypoint-wait.sh  docker-to-k8s.sh  install-hooks.sh  seed-data.sh  setup-worktree.sh  validate-event-contracts.js
services/chatbot-service/: .env.example  .gitignore  Dockerfile  pyproject.toml
services/chatbot-service/app/: main.py
services/chatbot-service/app/api/routes/: chat.py  documents.py  health.py
services/chatbot-service/app/core/: audit.py  config.py  constants.py  error_codes.py  exceptions.py  logging_config.py  metrics.py  security.py  telemetry.py  validators.py
services/chatbot-service/app/models/: conversation.py
services/chatbot-service/app/providers/: anthropic_provider.py  base.py  factory.py  google_provider.py  local_provider.py  ollama_provider.py  openai_provider.py
services/chatbot-service/app/rag/: chunker.py  embeddings.py  engine.py  retriever.py  vectorstore.py
services/chatbot-service/app/schemas/: chat.py  common.py  document.py  enums.py
services/chatbot-service/app/services/: conversation_service.py
services/chatbot-service/docs/: run-guide.md
services/chatbot-service/tests/: conftest.py  test_chat.py  test_chunker.py  test_config.py  test_conversation_service.py  test_documents.py  test_health.py  test_models.py  test_providers.py  test_rag_engine.py  test_retriever.py  test_schemas.py  test_security.py  test_vectorstore.py
(+3392 files in other folders)
