[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "chatbot-service"
version = "0.1.0"
description = "RAG-based Q&A Chatbot Service for Portal Universe"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # AI Providers
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.4.1",
    # Document processing
    "pypdf>=6.6.2",
    "unstructured>=0.16.17",
    # Vector DB
    "chromadb>=1.4.1",
    # Redis
    "redis[hiredis]>=7.1.0",
    # Utilities
    "python-multipart>=0.0.22",
    "sse-starlette>=3.2.0",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
